--- a/Uniplac.Mercado.Apresentacao.Webforms/Views/Vendas/Create.cshtml
+++ b/Uniplac.Mercado.Apresentacao.Webforms/Views/Vendas/Create.cshtml
@@ -25,7 +25,7 @@
             <section class="venda-create__itens-venda col-xs-12">
                 <label class="control-label col-sm-1"> Itens da Venda</label>
                 <div class="col-sm-11">
-                    <input type='submit' class="btn btn-default" value='Adicionar Item de Venda' formaction='@Url.Action("ModifyItemVenda")' />
+                    <input type='submit' class="btn btn-default pull-right" value='Adicionar Item de Venda' formaction='@Url.Action("ModifyItemVenda")' />
                     <table class="table table-hover">
                         <thead>
                             <tr>
@@ -65,7 +65,7 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-1 col-md-11">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-success" disabled="disabled" />
             </div>
         </div>
     </div>
