--- a/Uniplac.Mercado.Apresentacao.Webforms/Views/Vendas/ModifyItemVenda.cshtml
+++ b/Uniplac.Mercado.Apresentacao.Webforms/Views/Vendas/ModifyItemVenda.cshtml
@@ -1,14 +1,14 @@
 ﻿@model  Uniplac.Mercado.Apresentacao.Webforms.Models.ModifyItemVendaModel
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Adicionar Item de Venda</h4>
         <hr />
         <div class="form-group">
-           <label class="control-label col-sm-1 col-sm-offset-1">Qtd</label>
+            <label class="control-label col-sm-1 col-sm-offset-1">Qtd</label>
             @Html.EditorFor(model => model.Qtd, new { htmlAttributes = new { @class = "form-control col-sm-11" } })
         </div>
         <div class="form-group">
@@ -20,6 +20,22 @@
             <div class="col-sm-offset-1 col-sm-11">
                 <input type='submit' class="btn btn-success" value='Adicionar Item na Venda' formaction='@Url.Action("CreateWithItemVenda")' />
             </div>
+        </div>
+
+        <div class="form-group">
+            @for (int i = 0; i < Model.Produtos.Count; i++)
+            {
+                @Html.HiddenFor(x => Model.Produtos[i].Value)
+            }
+
+            @Html.HiddenFor(x => Model.Venda.Data)
+            @for (int i = 0; i < Model.Venda.Itens.Count; i++)
+            {
+                @Html.HiddenFor(x => Model.Venda.Itens[i].Id)
+                @Html.HiddenFor(x => Model.Venda.Itens[i].Qtd)
+                @Html.HiddenFor(x => Model.Venda.Itens[i].Produto.Id)
+                @Html.HiddenFor(x => Model.Venda.Itens[i].Produto.Nome)
+            }
         </div>
     </div>
 }
