Personalização do front-end

--- a/Uniplac.Mercado.Apresentacao.Webforms/Views/Vendas/Index.cshtml
+++ b/Uniplac.Mercado.Apresentacao.Webforms/Views/Vendas/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Lista de Vendas</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Adicionar Venda", "Create")
 </p>
 <table class="table">
     <tr>
