--- a/Uniplac.Mercado.Apresentacao.Webforms/Views/Home/Index.cshtml
+++ b/Uniplac.Mercado.Apresentacao.Webforms/Views/Home/Index.cshtml
@@ -8,5 +8,5 @@
     <br />
     <p class="lead"> Sistema para gestão de compras em comércios</p>
     <br />
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <p><a href="/Vendas" class="btn btn-primary btn-lg">Gerenciar Vendas &raquo;</a></p>
 </div>
