--- a/Uniplac.Mercado.Apresentacao.Webforms/Views/Produtoes/Index.cshtml
+++ b/Uniplac.Mercado.Apresentacao.Webforms/Views/Produtoes/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<Uniplac.Mercado.Dominio.Produto>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Produtos";
 }
 
-<h2>Index</h2>
+<h2>Cadastro de Produtos</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
