--- a/Uniplac.Mercado.Apresentacao.Webforms/Views/Vendas/Create.cshtml
+++ b/Uniplac.Mercado.Apresentacao.Webforms/Views/Vendas/Create.cshtml
@@ -13,13 +13,16 @@
     <div class="form-horizontal">
         <h5>Preencha os dados abaixo para cadastar a venda.</h5>
         <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             <section class="venda-create__data col-xs-12">
                 @Html.LabelFor(model => model.Data, htmlAttributes: new { @class = "control-label col-sm-1" })
                 <div class="col-sm-11">
+                    @{ Html.EnableClientValidation(false); }
+                
+
                     @Html.EditorFor(model => model.Data, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Data, "", new { @class = "text-danger" })
+
+                    @{ Html.EnableClientValidation(true); }
                 </div>
             </section>
             <section class="venda-create__itens-venda col-xs-12">
