--- a/Uniplac.Mercado.Apresentacao.Webforms/Views/Vendas/CreateWithItemVenda.cshtml
+++ b/Uniplac.Mercado.Apresentacao.Webforms/Views/Vendas/CreateWithItemVenda.cshtml
@@ -13,12 +13,14 @@
     <div class="form-horizontal">
         <h5>Preencha os dados abaixo para cadastar a venda.</h5>
         <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <section class="form-group venda-create__data col-xs-12">
             @Html.LabelFor(model => model.Venda.Data, htmlAttributes: new { @class = "control-label col-sm-1" })
             <div class="col-sm-11">
+                @{ Html.EnableClientValidation(false); }
+
                 @Html.EditorFor(model => model.Venda.Data, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Venda.Data, "", new { @class = "text-danger" })
+
+                @{ Html.EnableClientValidation(true); }
             </div>
         </section>
         <section class="form-group  venda-create__itens-venda col-xs-12">
